2001-02-20  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, exultmenu.cc imagewin/*.*: Added in Derek Liauw Kie Fa's
	  SuperEagle scaler.
	  	
2001-02-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: cleaned up 'build game map' code. Now accessible using a
	cmdline parameter. (-buildmap 0|1|2), where 0,1,2 determines skiplift

2001-02-16  Ryan Nunn  <triforce@merlin.net.au>
	* actor*.*, gamewin.*, objs/eggs.*, objs/objs.h: Caching system of the 
	  originals is now emulated by Exult. This solves the Army of Darkness
	  Bug as well as many of the bugs in SI related to cached in Usecode
	  eggs.
	* exult_constants.h: Added c_num_schunks.

2001-02-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* mapedit/u7shp.c: check if image is indexed before saving. (fixes crash)
	* mapedit/uniquepal.c: little tool to 'uniquify' a palette. (not included in main build)

2001-02-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/great_dagger.shp, data/magic_boomerang.shp: added some more art
	* data/flx.in, Makefile.*, gumps/Paperdoll_gump_info.cc: added shapes

2001-02-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/caddellite_helmet.shp: attempt at a caddellite helmet
	* gumps/Paperdoll_gump_info.cc: added caddellite helmet
	* data/flx.in, Makefile.*: added caddellite_helmet.shp
	
2001-02-14  Ryan Nunn  <triforce@merlin.net.au>
	* paperdoll_gump_info.cc: Hoe of Destruction no longer marked as
	  needing art.

2001-02-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.be: changed version to 0.92 too

2001-02-14  Tristan Tarrant  <nadir@users.sourceforge.net>
	* configure.in, Makefile.win32, Makefile.cygwin: bump up version to
	  0.92cvs to avoid confusion

2001-02-13  Ryan Nunn  <triforce@merlin.net.au>
	* gamewin.*, paperdoll_gump*.*: Support for paperdoll shapes in other
	  files. Only <DATA>/exult.flx at the moment.
	* Makefile.*, data/flx.in, paperdoll_gump_info.cc: Added Hoe of
	  Destruction shape for Black Gate paperdolls.
